# WebPDTool

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.yml  docker-start.sh  pytest.ini  tmp_rovodev_test_measurements.py
backend/: .dockerignore  .env.example  Dockerfile  HIGH_PRIORITY_MIGRATION_COMPLETE.md  INSTRUMENT_MIGRATION.md  MEDIUM_PRIORITY_MIGRATION_COMPLETE.md  MIGRATION_SUMMARY.md  QUICK_START.md  README.md  alembic.ini  docker-entrypoint.sh  instruments.json  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 20250109_change_measured_value_to_string.py  20260312_add_instruments_table.py  6ebc9c26834b_change_measured_value_to_text.py  a8124fdea538_add_project_id_to_test_plans.py  d31e415c57a9_add_modbus_config_table.py
backend/alembic_new/: env.py
backend/alembic_new/versions/: 0232af89acc2_add_new_fields_to_testplan_table.py  (+1 more)
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/api/: auth.py  (+11 more)
backend/config/: instruments_phase2_example.json
backend/scripts/: add_switch_mode_column.sql  add_testplan_fields.sql  batch_import.sh  fix_measured_value_type.sql  fix_test123_eq_limit.sql  import_testplan.py  migrate_case_type_to_switch_mode.sql  migrate_test_plans_schema.sql  test123.py  test_dut_control.py  test_high_priority_instruments.py  test_instruments_simple.py  test_opjudge.py  test_redis_logging.py  test_refactoring_api.py  verify_migration.py
backend/testplans/: ArduinoComport_testPlan.csv  UseResult_testPlan.csv  consoleDelay_testPlan.csv
(+579 files in other folders)
